--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -17,11 +17,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "pinia": "^3.0.3",
-    "vue": "^3.5.17",
     "axios": "^1.11.0",
-    "vue-router": "^4.5.1",
-    "bootstrap": "5.3.7"
+    "bootstrap": "5.3.7",
+    "pinia": "^3.0.3",
+    "sass": "^1.89.2",
+    "vue": "^3.5.17",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
