--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,29 @@
-# .gitignore
-
-# === .NET ===
-bin
-obj
-.user
-.suo
-.userosscache
-.sln.docstates
-
-# === Node.js  Vue ===
-node_modules
-dist
-.env
-.vite
-
-# === System Files ===
+# 🔒 Global ignores
 .DS_Store
 Thumbs.db
+
+# ⛔ Node/Vite/Vue (Frontend)
+Frontend/node_modules/
+Frontend/dist/
+Frontend/.vite/
+
+# ⛔ .NET/Visual Studio (Backend)
+Backend/**/bin/
+Backend/**/obj/
+Backend/.vs/
+Backend/**/TestResults/
+
+# 📦 NuGet packages (if any local ones)
+*.nupkg
+
+# ⚙️ IDE configs (optional, if not shared)
+.vscode/
+Frontend/.idea/
+Backend/.idea/
+
+# Logs
+*.log
+
+# 🔑 Env files
+Frontend/.env
+Backend/.env
