--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -22,7 +22,8 @@
     "pinia": "^3.0.3",
     "sass": "^1.89.2",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue3-spinners": "^1.3.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
