--- a/BackEnd/CoCanvas/Properties/launchSettings.json
+++ b/BackEnd/CoCanvas/Properties/launchSettings.json
@@ -29,15 +29,17 @@
       }
     },
     "Docker": {
-      "commandName": "Docker",
-      "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
-      "environmentVariables": {
-        "ASPNETCORE_HTTPS_PORTS": "8081",
-        "ASPNETCORE_HTTP_PORTS": "8080"
-      },
-      "publishAllPorts": true,
-      "useSSL": true
+        "commandName": "Docker",
+        "launchBrowser": true,
+        "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
+        "httpPort": 5002, 
+        "sslPort": 5003, 
+        "environmentVariables": {
+            "ASPNETCORE_HTTPS_PORTS": "8081",
+            "ASPNETCORE_HTTP_PORTS": "8080"
+        },
+        "publishAllPorts": true,
+        "useSSL": true
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
