--- a/BackEnd/CoCanvas.Infrastructure/CoCanvas.Infrastructure.csproj
+++ b/BackEnd/CoCanvas.Infrastructure/CoCanvas.Infrastructure.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Repositories\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.18" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.18" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CoCanvas.Domain\CoCanvas.Domain.csproj" />
   </ItemGroup>
 
 </Project>
