--- a/BackEnd/CoCanvas/appsettings.json
+++ b/BackEnd/CoCanvas/appsettings.json
@@ -1,7 +1,7 @@
 {
 
     "ConnectionStrings": {
-        "DefaultConnection" : "Server=.\\SQLExpress;Database=CoCanvasDb;Trusted_Connection=true;TrustServerCertificate=true;"
+        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CoCanvasDb;Trusted_Connection=true;TrustServerCertificate=true;"
     },
     "Logging": {
         "LogLevel": {
