--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "axios": "^1.11.0",
     "bootstrap": "5.3.7",
+    "jwt-decode": "^4.0.0",
     "pinia": "^3.0.3",
     "sass": "^1.89.2",
     "vue": "^3.5.17",
