--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -17,6 +17,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@yeger/vue-masonry-wall": "^5.0.21",
     "axios": "^1.11.0",
     "bootstrap": "5.3.7",
     "fabric": "^6.7.1",
