--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -17,12 +17,15 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.0.0",
+    "@fortawesome/free-regular-svg-icons": "^7.0.0",
+    "@fortawesome/free-solid-svg-icons": "^7.0.0",
+    "@fortawesome/vue-fontawesome": "^3.1.1",
     "@yeger/vue-masonry-wall": "^5.0.21",
     "axios": "^1.11.0",
     "bootstrap": "5.3.7",
     "fabric": "^6.7.1",
     "jwt-decode": "^4.0.0",
-    "lucide-vue-next": "^0.539.0",
     "pinia": "^3.0.3",
     "sass": "^1.89.2",
     "vue": "^3.5.17",
