--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -29,6 +29,7 @@
     "pinia": "^3.0.3",
     "sass": "^1.89.2",
     "vue": "^3.5.17",
+    "vue-picture-input": "^4.0.2",
     "vue-router": "^4.5.1",
     "vue3-spinners": "^1.3.1"
   },
