Create models in backend and define database relationships

--- a/BackEnd/CoCanvas.Infrastructure/CoCanvas.Infrastructure.csproj
+++ b/BackEnd/CoCanvas.Infrastructure/CoCanvas.Infrastructure.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\CoCanvas.Domain\CoCanvas.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Persistance\Migrations\" />
+  </ItemGroup>
+
 </Project>
