--- a/BackEnd/CoCanvas/CoCanvas.Api.csproj
+++ b/BackEnd/CoCanvas/CoCanvas.Api.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CoCanvas.Application\CoCanvas.Application.csproj" />
     <ProjectReference Include="..\CoCanvas.Domain\CoCanvas.Domain.csproj" />
     <ProjectReference Include="..\CoCanvas.Infrastructure\CoCanvas.Infrastructure.csproj" />
   </ItemGroup>
