--- a/BackEnd/CoCanvas.Application/CoCanvas.Application.csproj
+++ b/BackEnd/CoCanvas.Application/CoCanvas.Application.csproj
@@ -7,8 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CoCanvas.Domain\CoCanvas.Domain.csproj" />
-    <ProjectReference Include="..\CoCanvas.Infrastructure\CoCanvas.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
