--- a/BackEnd/CoCanvas.Infrastructure/CoCanvas.Infrastructure.csproj
+++ b/BackEnd/CoCanvas.Infrastructure/CoCanvas.Infrastructure.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.18" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.18" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CoCanvas.Application\CoCanvas.Application.csproj" />
     <ProjectReference Include="..\CoCanvas.Domain\CoCanvas.Domain.csproj" />
   </ItemGroup>
 
