--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.11.0",
     "bootstrap": "5.3.7",
     "fabric": "^6.7.1",
+    "guid-typescript": "^1.0.9",
     "jwt-decode": "^4.0.0",
     "pinia": "^3.0.3",
     "sass": "^1.89.2",
